[gd_scene load_steps=8 format=2]

[ext_resource path="res://Themes/35Theme.tres" type="Theme" id=1]
[ext_resource path="res://Themes/30Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/UI/SellConfirm.gd" type="Script" id=3]
[ext_resource path="res://Icons/Button_Pressed_Texture.png" type="Texture" id=4]
[ext_resource path="res://Icons/MenuBackground.png" type="Texture" id=5]
[ext_resource path="res://Icons/Button_Up_Texture.png" type="Texture" id=6]
[ext_resource path="res://Icons/Chode.png" type="Texture" id=7]

[node name="SellPanel" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -378.0
margin_top = -122.0
margin_right = 427.0
margin_bottom = 106.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="DropPanelContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftMargin" type="Label" parent="DropPanelContainer"]
margin_right = 10.0
margin_bottom = 228.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3

[node name="MainNodes" type="VBoxContainer" parent="DropPanelContainer"]
margin_left = 14.0
margin_right = 791.0
margin_bottom = 228.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMargin" type="Label" parent="DropPanelContainer/MainNodes"]
visible = false
margin_right = 714.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 1

[node name="Label" type="Label" parent="DropPanelContainer/MainNodes"]
margin_right = 777.0
margin_bottom = 57.0
theme = ExtResource( 1 )
text = "How many do you want to Sell?"
autowrap = true

[node name="SellAmount_Cont" type="HBoxContainer" parent="DropPanelContainer/MainNodes"]
margin_top = 61.0
margin_right = 777.0
margin_bottom = 131.0
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="SpinBox" type="SpinBox" parent="DropPanelContainer/MainNodes/SellAmount_Cont"]
margin_right = 302.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
rounded = true
align = 1

[node name="multiplied" type="Label" parent="DropPanelContainer/MainNodes/SellAmount_Cont"]
margin_left = 306.0
margin_right = 355.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
text = "x"
align = 1
valign = 1

[node name="item_price_cont" type="ColorRect" parent="DropPanelContainer/MainNodes/SellAmount_Cont"]
margin_left = 359.0
margin_right = 555.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="item_price" type="Label" parent="DropPanelContainer/MainNodes/SellAmount_Cont/item_price_cont"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.29236
margin_right = 1.29236
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
text = "5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equals" type="Label" parent="DropPanelContainer/MainNodes/SellAmount_Cont"]
margin_left = 559.0
margin_right = 577.0
margin_bottom = 70.0
size_flags_vertical = 3
text = "="
align = 1
valign = 1

[node name="Total_price_container" type="ColorRect" parent="DropPanelContainer/MainNodes/SellAmount_Cont"]
margin_left = 581.0
margin_right = 777.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total_Price" type="HBoxContainer" parent="DropPanelContainer/MainNodes/SellAmount_Cont/Total_price_container"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total_Price_Display" type="Label" parent="DropPanelContainer/MainNodes/SellAmount_Cont/Total_price_container/Total_Price"]
margin_right = 125.0
margin_bottom = 70.0
rect_min_size = Vector2( 125, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25
text = "0"
align = 2
valign = 1

[node name="CurrencyIcon" type="TextureRect" parent="DropPanelContainer/MainNodes/SellAmount_Cont/Total_price_container/Total_Price"]
margin_left = 129.0
margin_right = 196.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="DropPanelContainer/MainNodes"]
margin_top = 135.0
margin_right = 777.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 75 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="DropAll" type="ColorRect" parent="DropPanelContainer/MainNodes/Buttons"]
margin_right = 256.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 1, 0 )

[node name="DropAllButton" type="TextureButton" parent="DropPanelContainer/MainNodes/Buttons/DropAll"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropAllLabel" type="Label" parent="DropPanelContainer/MainNodes/Buttons/DropAll"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Sell All"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropCustom" type="ColorRect" parent="DropPanelContainer/MainNodes/Buttons"]
margin_left = 260.0
margin_right = 516.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 1, 0 )

[node name="DropCustomButton" type="TextureButton" parent="DropPanelContainer/MainNodes/Buttons/DropCustom"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropCustomLabel" type="Label" parent="DropPanelContainer/MainNodes/Buttons/DropCustom"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_right = -9.0
text = "Sell Selected"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="ColorRect" parent="DropPanelContainer/MainNodes/Buttons"]
margin_left = 520.0
margin_right = 777.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 1, 0 )

[node name="CloseButton" type="TextureButton" parent="DropPanelContainer/MainNodes/Buttons/Close"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseLabel" type="Label" parent="DropPanelContainer/MainNodes/Buttons/Close"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.7207
margin_right = 2.7207
text = "Close"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomMargin" type="Label" parent="DropPanelContainer/MainNodes"]
margin_top = 214.0
margin_right = 777.0
margin_bottom = 228.0
rect_min_size = Vector2( 0, 10 )
size_flags_vertical = 1

[node name="RightMargin" type="Label" parent="DropPanelContainer"]
margin_left = 795.0
margin_right = 805.0
margin_bottom = 228.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3
[connection signal="value_changed" from="DropPanelContainer/MainNodes/SellAmount_Cont/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="button_up" from="DropPanelContainer/MainNodes/Buttons/DropAll/DropAllButton" to="." method="_on_DropAllButton_button_up"]
[connection signal="button_up" from="DropPanelContainer/MainNodes/Buttons/DropCustom/DropCustomButton" to="." method="_on_DropCustomButton_button_up"]
[connection signal="button_up" from="DropPanelContainer/MainNodes/Buttons/Close/CloseButton" to="." method="_on_Close_button_up"]
